--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>calculator_with_vuejs</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>calculator_with_vuejs</title><link href=/dist/static/css/app.f5fe12c435f08b1e24f882d8adc78a93.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/dist/static/js/manifest.6fe89bf8453e352896e5.js></script><script type=text/javascript src=/dist/static/js/vendor.bf5e36cbe2b2394ce8f9.js></script><script type=text/javascript src=/dist/static/js/app.6e74f8d747f5a7dac885.js></script></body></html>
