--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset=utf-8>
-  <meta name=viewport content="width=device-width,initial-scale=1">
-  <title>calculator_with_vuejs</title>
-  <link href=/dist/static/css/app.e0750dfe5dd08bda947309df70f0ea55.css rel=stylesheet>
-</head>
-<body>
-  <div id=app></div>
-  <script type=text/javascript src=/dist/static/js/manifest.5f463a295f8c12faea40.js></script>
-  <script type=text/javascript src=/dist/static/js/vendor.bf5e36cbe2b2394ce8f9.js></script>
-  <script type=text/javascript src=/dist/static/js/app.db423da897e15920c24a.js></script>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>calculator_with_vuejs</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
 </html>
